--- a/web/config.toml
+++ b/web/config.toml
@@ -56,6 +56,7 @@ disableKinds = ["section", "taxonomy", "term"]
     [[module.mounts]]
         source = "assets"
         target = "assets"
+        excludeFiles = ['jsconfig.json']
     [[module.mounts]]
         source = "layouts"
         target = "layouts"
