--- a/requirements.txt
+++ b/requirements.txt
@@ -38,6 +38,7 @@ pyOpenSSL==24.3.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-slugify==8.0.4
+pytz==2025.1
 requests==2.32.3
 rsa==4.9
 six==1.17.0
