--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,12 @@ annotated-types==0.7.0
 anthropic==0.42.0
 anyio==4.7.0
 attrs==21.4.0
+blinker==1.9.0
 cachetools==5.5.0
 certifi==2024.12.14
 cffi==1.17.1
 charset-normalizer==3.4.1
+click==8.1.8
 colorama==0.4.6
 cryptography==44.0.0
 Deprecated==1.2.15
@@ -18,12 +20,18 @@ h11==0.14.0
 httpcore==1.0.7
 httpx==0.27.2
 idna==3.10
+Jinja2==3.1.5
 jiter==0.8.2
 jsonpath-python==1.0.6
 logfire-api==2.11.1
+Markdown==3.7
+MarkupSafe==3.0.2
 mistralai==1.2.5
 mypy-extensions==1.0.0
+natsort==8.4.0
 openai==1.58.1
+pilkit==3.0
+pillow==11.1.0
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
 pyasynchat==1.0.4
@@ -41,6 +49,7 @@ python-slugify==8.0.4
 pytz==2025.1
 requests==2.32.3
 rsa==4.9
+sigal==2.4
 six==1.17.0
 sniffio==1.3.1
 SpeechRecognition==3.12.0
