--- a/web/hugo.toml
+++ b/web/hugo.toml
@@ -26,7 +26,7 @@ disableKinds = ['taxonomy', 'term']
 
 [params.gallerydeluxe]
     shuffle     = false
-    reverse     = true
+    reverse     = false
     enable_exif = false
 
 [imaging]
